--- a/src/components/ButtonList/ButtonList.css
+++ b/src/components/ButtonList/ButtonList.css
@@ -4,14 +4,7 @@ li.buttonlist {
    justify-content: center;
 }
 
-li.buttonlist input.btn {
+li.buttonlist>.iconbutton {
    margin: 5px;
    width: 230px;
-   text-align: right;
-}
-
-li.buttonlist img {
-   cursor: pointer;
-   height: 27px;
-   margin-right: -35px;
 }
