--- a/src/Pages/ViewEmployees/ViewEmployees.css
+++ b/src/Pages/ViewEmployees/ViewEmployees.css
@@ -87,6 +87,8 @@ div.viewemployees>div.content>.show>.view {
    margin-right: 50px;
    background-color: #AAAAAA;
    border: 3px #AAAAAA solid;
+   border-radius: 10px;
+   overflow: hidden;
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-template-rows: repeat(11, auto);
@@ -94,8 +96,7 @@ div.viewemployees>div.content>.show>.view {
 }
 
 div.viewemployees>div.content>.show>.view>div {
-   width: 100%;
-   height: 100%;
+   height: 45px;
    background-color: #DDDDDD;
    display: flex;
    flex-flow: row nowrap;
