--- a/src/Pages/ViewEmployees/ViewEmployees.css
+++ b/src/Pages/ViewEmployees/ViewEmployees.css
@@ -33,23 +33,47 @@ div.viewemployees>div.content>div.control {
    display: flex;
    flex-flow: nowrap column;
    justify-content: flex-start;
-   align-items: center;
+   align-items: flex-start;
 }
 
 div.viewemployees>div.content>div.control>.iconbutton {
    width: 265px;
-   margin-top: 30px;
+   margin-top: 15px;
    margin-right: 10px;
 }
 
 div.viewemployees>div.content>div.control>.iconbutton>.btn {
    font-size: 20px;
+   padding: 10px 5px;
 }
 
 div.viewemployees>div.content>div.control>.iconbutton>img {
    width: 35px;
    height: 35px;
    margin-right: -40px;
+}
+
+div.viewemployees>div.content>div.control>label {
+   user-select: none;
+   font-size: 25px;
+   margin-top: 20px;
+   margin-right: 10px;
+   text-align: start;
+}
+
+div.viewemployees>div.content>div.control input.inptext {
+   margin-top: 5px;
+   margin-right: 10px;
+   font-size: 22px;
+   width: 265px;
+   color: #36454f;
+   border-color: #36454f;
+}
+
+div.viewemployees>div.content>div.control>.multiplebtn {
+   margin-top: 10px;
+   margin-right: 10px;
+   max-height: 290px;
 }
 
 div.viewemployees>div.content>.show {
@@ -64,40 +88,48 @@ div.viewemployees>div.navigation>.btn {
    font-size: 20px;
 }
 
-div.viewemployees>div.navigation>.btn:nth-child(1) {
+div.viewemployees>div.navigation>.enterEdits {
+   width: 200px !important;
+}
+
+div.viewemployees>div.navigation>.previous {
    margin-inline-end: 10px;
    text-align: start;
 }
 
-div.viewemployees>div.navigation>.btn:nth-child(2) {
+div.viewemployees>div.navigation>.current {
    width: 75px;
    margin: 30px 10px 0 10px;
    text-align: center;
+   transition: width 1s;
 }
 
-div.viewemployees>div.navigation>.btn:nth-child(3) {
+div.viewemployees>div.navigation>.next {
    margin-inline-start: 10px;
    text-align: end;
 }
 
 div.viewemployees>div.content>.show>.view {
+   user-select: none;
    width: 80%;
    height: 95%;
    margin-top: 20px;
    margin-right: 50px;
-   background-color: #AAAAAA;
-   border: 3px #AAAAAA solid;
+   background-color: #555555;
+   border: 3px #555555 solid;
    border-radius: 10px;
    overflow: hidden;
-   display: grid;
-   grid-template-columns: repeat(4, auto);
-   grid-template-rows: repeat(11, auto);
-   gap: 3px;
+   display: flex;
+   flex-flow: wrap row;
+   justify-content: flex-start;
+   padding-bottom: 3px;
 }
 
 div.viewemployees>div.content>.show>.view>div {
+   width: CALC(CALC(CALC(100% - 106px) / 3) - 6px);
    height: 45px;
-   background-color: #DDDDDD;
+   background-color: #EDEDED;
+   margin: 3px;
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
@@ -108,19 +140,45 @@ div.viewemployees>div.content>.show>.view>div {
    scrollbar-width: none;
 }
 
+div.viewemployees>div.content>.show>.view>div:nth-child(4n+1) {
+   width: 100px;
+}
+
+div.viewemployees>div.content>.show>.view>div:nth-last-child(4) {
+   border-bottom-right-radius: 5px;
+}
+
+div.viewemployees>div.content>.show>.view>div:last-child {
+   border-bottom-left-radius: 5px;
+}
+
 div.viewemployees>div.content>.show>.view>div::-webkit-scrollbar {
    display: none;
 }
 
 div.viewemployees>div.content>.show>.view>div.headings {
-   background-color: #999999;
+   background-color: #555555;
    color: white;
 }
 
-div.viewemployees>div.content>.show>.view>div.row:hover {
+div.viewemployees>div.content>.show>.view>div.selected {
    background-color: white;
 }
 
-div.viewemployees>div.content>.show>.view>div>span {
+div.viewemployees>div.content>.show>.view>div>div.inner {
+   padding: 2px 5px;
    margin-right: 3px;
+   overflow: scroll;
+   scrollbar-width: none;
+}
+
+
+div.viewemployees>div.content>.show>.view>div>div.inner::-webkit-scrollbar {
+   display: none;
+}
+
+div.viewemployees>div.content>.show>.view>div>div.inner[contentEditable=true] {
+   background-color: white;
+   border: 1px solid #555555;
+   border-radius: 3px;
 }
