--- a/src/components/MultipletInput/MultipletInput.css
+++ b/src/components/MultipletInput/MultipletInput.css
@@ -4,7 +4,8 @@
    align-items: flex-start;
 }
 
-.multiple>ul.selectlist {
+.multiple>.selectlist {
+   width: 100%;
    height: 0;
    transition: height 0.5s;
    list-style: none;
@@ -12,6 +13,8 @@
    margin-top: 10px;
    padding-top: 0;
    padding-right: 40px;
+   display: grid;
+   grid-template-columns: 175px 175px;
 }
 
 .multiple>button {
@@ -20,17 +23,22 @@
    font-size: 15px;
 }
 
-.multiple>ul>li {
+.multiple>.selectlist>div {
    display: flex;
+   justify-content: flex-start;
+   align-items: center;
    flex-flow: nowrap row;
 }
 
-.multiple>ul>li>input {
+.multiple>.selectlist>div>input {
    cursor: pointer;
 }
 
-.multiple>ul>li>span {
+.multiple>.selectlist>div>span {
    cursor: pointer;
+   width: 100%;
+   height: 25px;
+   text-align: start;
    font-size: 20px;
    padding-right: 10px;
 }
