--- a/src/Pages/ViewStudents/ViewStudents.css
+++ b/src/Pages/ViewStudents/ViewStudents.css
@@ -1,4 +1,4 @@
-div.viewtestforms {
+div.viewstudents {
    width: 100%;
    height: CALC(100% - 73px);
    display: flex;
@@ -8,7 +8,7 @@ div.viewtestforms {
    background-color: white;
 }
 
-div.viewtestforms>div.content {
+div.viewstudents>div.content {
    width: 100%;
    flex: 5;
    display: flex;
@@ -18,7 +18,7 @@ div.viewtestforms>div.content {
    background-color: white;
 }
 
-div.viewtestforms>div.navigation {
+div.viewstudents>div.navigation {
    width: 100%;
    flex: 1;
    display: flex;
@@ -27,33 +27,33 @@ div.viewtestforms>div.navigation {
    align-items: flex-start;
 }
 
-div.viewtestforms>div.content>div.control {
+div.viewstudents>div.content>div.control {
    height: 100%;
-   flex: 1;
+   flex: 2.66;
    display: flex;
    flex-flow: nowrap column;
    justify-content: flex-start;
    align-items: flex-start;
 }
 
-div.viewtestforms>div.content>div.control>.iconbutton {
+div.viewstudents>div.content>div.control>.iconbutton {
    width: 265px;
    margin-top: 15px;
    margin-right: 10px;
 }
 
-div.viewtestforms>div.content>div.control>.iconbutton>.btn {
+div.viewstudents>div.content>div.control>.iconbutton>.btn {
    font-size: 20px;
    padding: 10px 5px;
 }
 
-div.viewtestforms>div.content>div.control>.iconbutton>img {
+div.viewstudents>div.content>div.control>.iconbutton>img {
    width: 35px;
    height: 35px;
    margin-right: -40px;
 }
 
-div.viewtestforms>div.content>div.control>label {
+div.viewstudents>div.content>div.control>label {
    user-select: none;
    font-size: 25px;
    margin-top: 20px;
@@ -61,7 +61,7 @@ div.viewtestforms>div.content>div.control>label {
    text-align: start;
 }
 
-div.viewtestforms>div.content>div.control input.inptext {
+div.viewstudents>div.content>div.control input.inptext {
    margin-top: 5px;
    margin-right: 10px;
    font-size: 22px;
@@ -70,55 +70,55 @@ div.viewtestforms>div.content>div.control input.inptext {
    border-color: #36454f;
 }
 
-div.viewtestforms>div.content>div.control>.multiplebtn {
+div.viewstudents>div.content>div.control>.multiplebtn {
    margin-top: 10px;
    margin-right: 10px;
    max-height: 290px;
 }
 
-div.viewtestforms>div.content>div.control>.multiplebtn .btn {
+div.viewstudents>div.content>div.control>.multiplebtn .btn {
    width: 145px;
 }
 
-div.viewtestforms>div.content>.show {
+div.viewstudents>div.content>.show {
    width: 100%;
    height: 100%;
    flex: 9;
 }
 
-div.viewtestforms>div.navigation>.btn {
+div.viewstudents>div.navigation>.btn {
    width: 120px;
    margin-top: 30px;
    font-size: 20px;
 }
 
-div.viewtestforms>div.navigation>.enterEdits {
+div.viewstudents>div.navigation>.enterEdits {
    width: 200px !important;
 }
 
-div.viewtestforms>div.navigation>.previous {
+div.viewstudents>div.navigation>.previous {
    margin-inline-end: 10px;
    text-align: start;
 }
 
-div.viewtestforms>div.navigation>.current {
+div.viewstudents>div.navigation>.current {
    width: 75px;
    margin: 30px 10px 0 10px;
    text-align: center;
    transition: width 1s;
 }
 
-div.viewtestforms>div.navigation>.next {
+div.viewstudents>div.navigation>.next {
    margin-inline-start: 10px;
    text-align: end;
 }
 
-div.viewtestforms>div.content>.show>.view {
+div.viewstudents>div.content>.show>.view {
    user-select: none;
-   width: 60%;
+   width: 80%;
    height: 95%;
    margin-top: 20px;
-   margin-right: 110px;
+   margin-right: 50px;
    background-color: #555555;
    border: 3px #555555 solid;
    border-radius: 10px;
@@ -129,22 +129,22 @@ div.viewtestforms>div.content>.show>.view {
    padding-bottom: 3px;
 }
 
-div.viewtestforms div.tabletile {
-   width: CALC(CALC(100% - 106px) - 6px);
+div.viewstudents div.tabletile {
+   width: CALC(CALC(CALC(100% - 106px) / 7) - 6px);
 }
 
-div.viewtestforms div.tabletile:nth-child(2n+1) {
+div.viewstudents div.tabletile:nth-child(8n+1) {
    width: 100px;
 }
 
-div.viewtestforms div.tabletile:nth-last-child(4) {
+div.viewstudents div.tabletile:nth-last-child(4) {
    border-bottom-right-radius: 0;
 }
 
-div.viewtestforms div.tabletile:nth-last-child(2) {
+div.viewstudents div.tabletile:nth-last-child(8) {
    border-bottom-right-radius: 5px;
 }
 
-div.viewtestforms div.tabletile:last-child {
+div.viewstudents div.tabletile:last-child {
    border-bottom-left-radius: 5px;
 }
