--- a/src/Pages/ViewStudents/ViewStudents.css
+++ b/src/Pages/ViewStudents/ViewStudents.css
@@ -129,6 +129,22 @@ div.viewstudents>div.content>.show>.view {
    padding-bottom: 3px;
 }
 
+div.viewstudents.editing .tabletile.check {
+   justify-content: center;
+}
+
+div.viewstudents.editing .tabletile.check .inner {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+}
+
+div.viewstudents.editing .tabletile.check .inner input {
+   scale: 2;
+}
+
 div.viewstudents div.tabletile {
    width: CALC(CALC(CALC(100% - 106px) / 7) - 6px);
 }
@@ -147,4 +163,33 @@ div.viewstudents div.tabletile:nth-last-child(8) {
 
 div.viewstudents div.tabletile:last-child {
    border-bottom-left-radius: 5px;
+}
+
+div.viewstudents.editing>div.content>.show>.view {
+   width: 90%;
+}
+
+div.viewstudents.editing div.tabletile {
+   width: CALC(CALC(CALC(100% - 106px) / 8) - 6px);
+}
+
+div.viewstudents.editing div.tabletile:nth-child(9n+1) {
+   width: 100px;
+}
+
+div.viewstudents.editing div.tabletile:nth-last-child(4) {
+   border-bottom-right-radius: 0;
+}
+
+div.viewstudents.editing div.tabletile:nth-last-child(9) {
+   border-bottom-right-radius: 5px;
+}
+
+div.viewstudents.editing div.tabletile:last-child {
+   border-bottom-left-radius: 5px;
+}
+
+div.viewstudents .btn.addabsents {
+   width: auto !important;
+   margin-right: 20px;
 }
