--- a/src/Pages/AddTest/AddTest.css
+++ b/src/Pages/AddTest/AddTest.css
@@ -1,11 +1,11 @@
-div.addtestform {
+div.addtest {
    width: 100%;
    height: CALC(100% - 73px);
    background-color: white;
    user-select: none;
 }
 
-div.addtestform>img.bg {
+div.addtest>img.bg {
    width: 60%;
    height: CALC(100% - 73px);
    position: absolute;
@@ -15,7 +15,7 @@ div.addtestform>img.bg {
    clip-path: ellipse(60% 50% at 30% 50%);
 }
 
-div.addtestform>div.content {
+div.addtest>div.content {
    width: 100%;
    height: calc(100% - 73px);
    background-color: white;
@@ -25,33 +25,33 @@ div.addtestform>div.content {
    align-items: flex-start;
 }
 
-div.addtestform>div.content>form {
+div.addtest>div.content>form {
    border: 6px #061E45 solid;
    border-radius: 10px;
    padding: 10px;
    margin: 50px 70px 0 0;
 }
 
-div.addtestform>div.content>form>label {
+div.addtest>div.content>form>label {
    font-size: 25px;
    float: right;
    color: #061E45;
 }
 
-div.addtestform>div.content>form input[type=text],
-div.addtestform>div.content>form input[type=number],
-div.addtestform>div.content>form input[type=date] {
+div.addtest>div.content>form input[type=text],
+div.addtest>div.content>form input[type=number],
+div.addtest>div.content>form input[type=date] {
    font-size: 30px;
    color: #061E45;
    border-bottom-color: #061E45;
 }
 
-div.addtestform>div.content>form>div.multiple {
+div.addtest>div.content>form>div.multiple {
    margin-right: 100px;
    margin-top: 3px;
 }
 
-div.addtestform>div.content>form>input[type=button] {
+div.addtest>div.content>form>input[type=button] {
    font-size: 25px;
    width: 200px;
 }
