Add Marks Page With Add And View And Edit Functionalities

--- a/src/components/TableTile/TableTile.css
+++ b/src/components/TableTile/TableTile.css
@@ -45,6 +45,10 @@ div.tabletile>div.inner {
    scrollbar-width: none;
 }
 
+div.tabletile>div.inner.editable {
+   min-width: 75px;
+}
+
 div.tabletile>div.inner::-webkit-scrollbar {
    display: none;
 }
