--- a/src/Pages/AcceptStudents/AcceptStudents.css
+++ b/src/Pages/AcceptStudents/AcceptStudents.css
@@ -1,4 +1,4 @@
-div.viewtests {
+div.viewacceptedstudents {
    width: 100%;
    height: CALC(100% - 73px);
    display: flex;
@@ -8,7 +8,7 @@ div.viewtests {
    background-color: white;
 }
 
-div.viewtests>div.content {
+div.viewacceptedstudents>div.content {
    width: 100%;
    flex: 5;
    display: flex;
@@ -18,7 +18,7 @@ div.viewtests>div.content {
    background-color: white;
 }
 
-div.viewtests>div.navigation {
+div.viewacceptedstudents>div.navigation {
    width: 100%;
    flex: 1;
    display: flex;
@@ -27,7 +27,7 @@ div.viewtests>div.navigation {
    align-items: flex-start;
 }
 
-div.viewtests>div.content>div.control {
+div.viewacceptedstudents>div.content>div.control {
    height: 100%;
    flex: 2.66;
    display: flex;
@@ -36,24 +36,24 @@ div.viewtests>div.content>div.control {
    align-items: flex-start;
 }
 
-div.viewtests>div.content>div.control>.iconbutton {
+div.viewacceptedstudents>div.content>div.control>.iconbutton {
    width: 265px;
    margin-top: 15px;
    margin-right: 10px;
 }
 
-div.viewtests>div.content>div.control>.iconbutton>.btn {
+div.viewacceptedstudents>div.content>div.control>.iconbutton>.btn {
    font-size: 20px;
    padding: 10px 5px;
 }
 
-div.viewtests>div.content>div.control>.iconbutton>img {
+div.viewacceptedstudents>div.content>div.control>.iconbutton>img {
    width: 35px;
    height: 35px;
    margin-right: -40px;
 }
 
-div.viewtests>div.content>div.control>label {
+div.viewacceptedstudents>div.content>div.control>label {
    user-select: none;
    font-size: 25px;
    margin-top: 20px;
@@ -61,7 +61,7 @@ div.viewtests>div.content>div.control>label {
    text-align: start;
 }
 
-div.viewtests>div.content>div.control input.inptext {
+div.viewacceptedstudents>div.content>div.control input.inptext {
    margin-top: 5px;
    margin-right: 10px;
    font-size: 22px;
@@ -70,52 +70,52 @@ div.viewtests>div.content>div.control input.inptext {
    border-color: #36454f;
 }
 
-div.viewtests>div.content>div.control>.multiplebtn {
+div.viewacceptedstudents>div.content>div.control>.multiplebtn {
    margin-top: 10px;
    margin-right: 10px;
    max-height: 290px;
 }
 
-div.viewtests>div.content>div.control>.multiplebtn .btn {
+div.viewacceptedstudents>div.content>div.control>.multiplebtn .btn {
    width: 145px;
 }
 
-div.viewtests>div.content>.show {
+div.viewacceptedstudents>div.content>.show {
    width: 100%;
    height: 100%;
    flex: 9;
 }
 
-div.viewtests>div.navigation>.btn {
+div.viewacceptedstudents>div.navigation>.btn {
    width: 120px;
    margin-top: 30px;
    font-size: 20px;
 }
 
-div.viewtests>div.navigation>.enterEdits {
+div.viewacceptedstudents>div.navigation>.enterEdits {
    width: 200px !important;
 }
 
-div.viewtests>div.navigation>.previous {
+div.viewacceptedstudents>div.navigation>.previous {
    margin-inline-end: 10px;
    text-align: start;
 }
 
-div.viewtests>div.navigation>.current {
+div.viewacceptedstudents>div.navigation>.current {
    width: 75px;
    margin: 30px 10px 0 10px;
    text-align: center;
    transition: width 1s;
 }
 
-div.viewtests>div.navigation>.next {
+div.viewacceptedstudents>div.navigation>.next {
    margin-inline-start: 10px;
    text-align: end;
 }
 
-div.viewtests>div.content>.show>.view {
+div.viewacceptedstudents>div.content>.show>.view {
    user-select: none;
-   width: 90%;
+   width: 80%;
    height: 95%;
    margin-top: 20px;
    margin-right: 50px;
@@ -129,26 +129,46 @@ div.viewtests>div.content>.show>.view {
    padding-bottom: 3px;
 }
 
-div.viewtests div.tabletile {
-   width: CALC(CALC(CALC(100% - 262px) / 6) - 6px);
+div.viewacceptedstudents .tabletile.check {
+   justify-content: center;
 }
 
-div.viewtests div.tabletile:nth-child(8n+1) {
+div.viewacceptedstudents .tabletile.check .inner {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+}
+
+div.viewacceptedstudents .tabletile.check .inner input {
+   scale: 2;
+}
+
+div.viewacceptedstudents>div.content>.show>.view {
+   width: 90%;
+}
+
+div.viewacceptedstudents div.tabletile {
+   width: CALC(CALC(CALC(100% - 262px) / 7) - 6px);
+}
+
+div.viewacceptedstudents div.tabletile:nth-child(9n+1) {
    width: 100px;
 }
 
-div.viewtests div.tabletile:nth-child(8n+7) {
+div.viewacceptedstudents div.tabletile:nth-child(9n+8) {
    width: 150px;
 }
 
-div.viewtests div.tabletile:nth-last-child(4) {
+div.viewacceptedstudents div.tabletile:nth-last-child(4) {
    border-bottom-right-radius: 0;
 }
 
-div.viewtests div.tabletile:nth-last-child(8) {
+div.viewacceptedstudents div.tabletile:nth-last-child(9) {
    border-bottom-right-radius: 5px;
 }
 
-div.viewtests div.tabletile:last-child {
+div.viewacceptedstudents div.tabletile:last-child {
    border-bottom-left-radius: 5px;
 }
