--- a/src/Pages/SelectStudents/SelectStudents.css
+++ b/src/Pages/SelectStudents/SelectStudents.css
@@ -1,4 +1,4 @@
-div.viewstudents {
+div.selectstudents {
    width: 100%;
    height: CALC(100% - 73px);
    display: flex;
@@ -8,7 +8,7 @@ div.viewstudents {
    background-color: white;
 }
 
-div.viewstudents>div.content {
+div.selectstudents>div.content {
    width: 100%;
    flex: 5;
    display: flex;
@@ -18,7 +18,7 @@ div.viewstudents>div.content {
    background-color: white;
 }
 
-div.viewstudents>div.navigation {
+div.selectstudents>div.navigation {
    width: 100%;
    flex: 1;
    display: flex;
@@ -27,7 +27,7 @@ div.viewstudents>div.navigation {
    align-items: flex-start;
 }
 
-div.viewstudents>div.content>div.control {
+div.selectstudents>div.content>div.control {
    height: 100%;
    flex: 2.66;
    display: flex;
@@ -36,28 +36,24 @@ div.viewstudents>div.content>div.control {
    align-items: flex-start;
 }
 
-div.viewstudents>div.content>div.control .iconbutton {
+div.selectstudents>div.content>div.control>.iconbutton {
    width: 265px;
+   margin-top: 15px;
+   margin-right: 10px;
 }
 
-div.viewstudents>div.content>div.control .iconbutton>.btn {
+div.selectstudents>div.content>div.control>.iconbutton>.btn {
    font-size: 20px;
    padding: 10px 5px;
 }
 
-
-div.viewstudents>div.content>div.control .iconbutton>img {
+div.selectstudents>div.content>div.control>.iconbutton>img {
    width: 35px;
    height: 35px;
    margin-right: -40px;
 }
 
-div.viewstudents>div.content>div.control>.iconbutton {
-   margin-top: 15px;
-   margin-right: 10px;
-}
-
-div.viewstudents>div.content>div.control>label {
+div.selectstudents>div.content>div.control>label {
    user-select: none;
    font-size: 25px;
    margin-top: 20px;
@@ -65,7 +61,7 @@ div.viewstudents>div.content>div.control>label {
    text-align: start;
 }
 
-div.viewstudents>div.content>div.control input.inptext {
+div.selectstudents>div.content>div.control input.inptext {
    margin-top: 5px;
    margin-right: 10px;
    font-size: 22px;
@@ -74,50 +70,50 @@ div.viewstudents>div.content>div.control input.inptext {
    border-color: #36454f;
 }
 
-div.viewstudents>div.content>div.control>.multiplebtn {
+div.selectstudents>div.content>div.control>.multiplebtn {
    margin-top: 10px;
    margin-right: 10px;
    max-height: 290px;
 }
 
-div.viewstudents>div.content>div.control>.multiplebtn .btn {
+div.selectstudents>div.content>div.control>.multiplebtn .btn {
    width: 145px;
 }
 
-div.viewstudents>div.content>.show {
+div.selectstudents>div.content>.show {
    width: 100%;
    height: 100%;
    flex: 9;
 }
 
-div.viewstudents>div.navigation>.btn {
+div.selectstudents>div.navigation>.btn {
    width: 120px;
    margin-top: 30px;
    font-size: 20px;
 }
 
-div.viewstudents>div.navigation>.enterEdits {
+div.selectstudents>div.navigation>.enterEdits {
    width: 200px !important;
 }
 
-div.viewstudents>div.navigation>.previous {
+div.selectstudents>div.navigation>.previous {
    margin-inline-end: 10px;
    text-align: start;
 }
 
-div.viewstudents>div.navigation>.current {
+div.selectstudents>div.navigation>.current {
    width: 75px;
    margin: 30px 10px 0 10px;
    text-align: center;
    transition: width 1s;
 }
 
-div.viewstudents>div.navigation>.next {
+div.selectstudents>div.navigation>.next {
    margin-inline-start: 10px;
    text-align: end;
 }
 
-div.viewstudents>div.content>.show>.view {
+div.selectstudents>div.content>.show>.view {
    user-select: none;
    width: 80%;
    height: 95%;
@@ -133,11 +129,11 @@ div.viewstudents>div.content>.show>.view {
    padding-bottom: 3px;
 }
 
-div.viewstudents.editing .tabletile.check {
+div.selectstudents .tabletile.check {
    justify-content: center;
 }
 
-div.viewstudents.editing .tabletile.check .inner {
+div.selectstudents .tabletile.check .inner {
    display: flex;
    justify-content: center;
    align-items: center;
@@ -145,55 +141,30 @@ div.viewstudents.editing .tabletile.check .inner {
    height: 100%;
 }
 
-div.viewstudents.editing .tabletile.check .inner input {
+div.selectstudents .tabletile.check .inner input {
    scale: 2;
 }
 
-div.viewstudents div.tabletile {
-   width: CALC(CALC(CALC(100% - 106px) / 7) - 6px);
-}
-
-div.viewstudents div.tabletile:nth-child(8n+1) {
-   width: 100px;
-}
-
-div.viewstudents div.tabletile:nth-last-child(4) {
-   border-bottom-right-radius: 0;
-}
-
-div.viewstudents div.tabletile:nth-last-child(8) {
-   border-bottom-right-radius: 5px;
-}
-
-div.viewstudents div.tabletile:last-child {
-   border-bottom-left-radius: 5px;
-}
-
-div.viewstudents.editing>div.content>.show>.view {
+div.selectstudents>div.content>.show>.view {
    width: 90%;
 }
 
-div.viewstudents.editing div.tabletile {
+div.selectstudents div.tabletile {
    width: CALC(CALC(CALC(100% - 106px) / 8) - 6px);
 }
 
-div.viewstudents.editing div.tabletile:nth-child(9n+1) {
+div.selectstudents div.tabletile:nth-child(9n+1) {
    width: 100px;
 }
 
-div.viewstudents.editing div.tabletile:nth-last-child(4) {
+div.selectstudents div.tabletile:nth-last-child(4) {
    border-bottom-right-radius: 0;
 }
 
-div.viewstudents.editing div.tabletile:nth-last-child(9) {
+div.selectstudents div.tabletile:nth-last-child(9) {
    border-bottom-right-radius: 5px;
 }
 
-div.viewstudents.editing div.tabletile:last-child {
+div.selectstudents div.tabletile:last-child {
    border-bottom-left-radius: 5px;
-}
-
-div.viewstudents .btn.addabsents {
-   width: auto !important;
-   margin-right: 20px;
 }
