--- a/src/components/ButtonList/ButtonList.css
+++ b/src/components/ButtonList/ButtonList.css
@@ -4,7 +4,7 @@ li.buttonlist {
    justify-content: center;
 }
 
-li.buttonlist>.iconbutton {
+li.buttonlist a {
    margin: 5px;
    width: 230px;
 }
