--- a/src/components/HeaderList/HeaderList.css
+++ b/src/components/HeaderList/HeaderList.css
@@ -18,3 +18,12 @@ li.headerlist.active {
    color: #d4AF37;
    border-bottom: 10px #d4AF37 solid;
 }
+
+li.headerlist a {
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-flow: nowrap row;
+   justify-content: center;
+   align-items: center;
+}
