--- a/src/components/PasswordInput/PasswordInput.css
+++ b/src/components/PasswordInput/PasswordInput.css
@@ -1,13 +1,16 @@
 div.pass>input.inppass {
-   width: 350px;
    cursor: text;
+   width: 350px;
    background-color: transparent;
    border: 0 transparent none;
-   border-bottom: 1px white solid;
+   background-color: white;
+   padding: 5px;
+   border-radius: 50px;
    font-size: 20px;
-   color: white;
+   color: #2A1F60 ;
    outline: none;
    display: inline;
+   padding-right: 20px;
 }
 
 div.pass>img.imgpass {
@@ -17,6 +20,4 @@ div.pass>img.imgpass {
    position: absolute;
    margin-top: -4px;
    margin-right: -30px;
-   border: 0 transparent none;
-   border-bottom: 1px white solid;
 }
