--- a/src/components/TextInput/TextInput.css
+++ b/src/components/TextInput/TextInput.css
@@ -3,11 +3,14 @@ div.text>input.inptext {
    width: 350px;
    background-color: transparent;
    border: 0 transparent none;
-   border-bottom: 1px white solid;
+   background-color: white;
+   padding: 5px;
+   border-radius: 50px;
    font-size: 20px;
-   color: white;
+   color: #2A1F60 ;
    outline: none;
    display: inline;
+   padding-right: 20px;
 }
 
 div.text>input.inptext::placeholder {
@@ -20,6 +23,4 @@ div.text>img.imgtext {
    position: absolute;
    margin-top: -4px;
    margin-right: -30px;
-   border: 0 transparent none;
-   border-bottom: 1px white solid;
 }
