--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,41 @@
+:root {
+   --mainRed : #FF0000 ;
+   --mainBlue: #71B4E7 ;
+   --mainLightPurple: #D9D2FF ;
+   --mainGray: #BBBBBB ;
+   --mainPurple: #2A1F60 ;
+}
+
+/* classes for colors */
+.text-red {
+   color: var(--mainRed) !important;
+}
+.text-blue {
+   color: var(--mainBlue) !important;
+}
+.text-light-purple {
+   color: var(--mainLightPurple) !important;
+}
+.text-gray {
+   color: var(--mainGray) !important;
+}
+.text-purple {
+   color: var(--mainPurple) !important;
+}
+.pointer {
+   cursor: pointer;
+}
+
 .App {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
+   width: 100%;
+   height: 100vh;
+   text-align: center;
 }
 
 a {
-  color: unset !important;
-  font-style: unset !important;
-  text-decoration: unset !important;
+   color: unset !important;
+   font-style: unset !important;
+   text-decoration: unset !important;
 }
 
 .login {
@@ -235,3 +263,29 @@ button {
    line-height: 3.3;
 }
 /* end navbar */
+
+
+/* start grades and classes */
+
+.grade {
+   max-width: 1219px;
+}
+.item {
+   height: fit-content;
+   padding: 15px;
+}
+.item.active {
+   background-color: var(--mainPurple);
+   color: white !important;
+   border-radius: 10px;
+}
+.add-grade-btn {
+   box-shadow: rgb(128, 128, 128) 1px 1px 5px;
+   width: 200px;
+   height: fit-content;
+   text-align: left;
+   padding: 5px 0 5px 16px;
+   margin-top: 42px;
+}
+
+/* end grades and classes */
