working grades page and moidified app.css to make it simple (check it)

--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,7 @@ button {
 /* start grades and classes */
 
 .grade {
-   max-width: 1219px;
+   max-width: 1219px !important;
 }
 .item {
    height: fit-content;
