--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,6 @@
    color: var(--mainPurple) !important;
 }
 
-
 .pointer {
    cursor: pointer;
 }
@@ -308,6 +307,14 @@ button {
 
 /* end navbar */
 
+
+/* start class info*/
+.class-info {
+   background-color: var();
+}
+/* end class info*/
+
+/* start grades and classes */
 .grade {
    max-width: 1219px !important;
 }
@@ -318,7 +325,7 @@ button {
 .item.active {
    background-color: var(--mainPurple);
    color: white !important;
-   border-radius: 10px;
+   border-radius: 20px;
 }
 .add-grade-btn {
    box-shadow: rgb(128, 128, 128) 1px 1px 5px;
@@ -333,6 +340,7 @@ button {
 }
 .grade-number {
    border-bottom: 3px solid var(--mainGray);
+   margin-left: 100px;
 }
 .dropdown-menu {
    position: absolute;
@@ -340,12 +348,10 @@ button {
    margin: 0px;
    transform: translate3d(0, 60px, 0px) !important;
    width: 100%;
-   background-color: var(--mainGray);
-   opacity: 0.4;
    text-align: center !important;
-   background-color: var(--mainGray) !important;
-   opacity: 0.3;
+   background-color: #C0C0C0 !important;
    padding-top: 25px !important;
+   transition: 10s !important;
 }
 .dropdown-menu .class {
    background-color: white;
