--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
 }
 
 /* classes for colors */
+.text-black {
+   color: "black" !important;
+}
+
 .text-red {
    color: var(--mainRed) !important;
 }
@@ -41,6 +45,16 @@ a {
    color: unset !important;
    font-style: unset !important;
    text-decoration: unset !important;
+}
+
+div.text>input {
+   border: 1.5px gray solid;
+   padding: 5px;
+   border-radius: 50px;
+   font-size: 20px;
+   color: #2A1F60;
+   outline: none;
+   padding-right: 20px;
 }
 
 .login {
@@ -95,13 +109,11 @@ a {
    overflow: hidden;
 }
 
-.login .text,
-.login .pass {
+.login div.text {
    margin: 20px;
 }
 
-.login .inptext,
-.login .inppass {
+.login div.text>input {
    width: 300px !important;
 }
 
