--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,16 @@ a {
    text-decoration: unset !important;
 }
 
+div.text>input {
+   border: 1.5px gray solid;
+   padding: 5px;
+   border-radius: 50px;
+   font-size: 20px;
+   color: #2A1F60;
+   outline: none;
+   padding-right: 20px;
+}
+
 .login {
    width: 100%;
    height: 100%;
@@ -115,13 +125,11 @@ a {
    overflow: hidden;
 }
 
-.login .text,
-.login .pass {
+.login div.text {
    margin: 20px;
 }
 
-.login .inptext,
-.login .inppass {
+.login div.text>input {
    width: 300px !important;
 }
 
