--- a/src/App.css
+++ b/src/App.css
@@ -63,16 +63,6 @@ a {
    text-decoration: unset !important;
 }
 
-div.text>input {
-   border: 1.5px gray solid;
-   padding: 5px;
-   border-radius: 50px;
-   font-size: 20px;
-   color: #2A1F60;
-   outline: none;
-   padding-right: 20px;
-}
-
 .login {
    width: 100%;
    height: 100%;
@@ -125,11 +115,8 @@ div.text>input {
    overflow: hidden;
 }
 
-.login div.text {
+.login input {
    margin: 20px;
-}
-
-.login div.text>input {
    width: 300px !important;
 }
 
