Fix Pop-Up, Add More Components.

--- a/src/Pages/SchoolCalendar/SchoolCalendar.module.css
+++ b/src/Pages/SchoolCalendar/SchoolCalendar.module.css
@@ -1,12 +1,8 @@
-.row {
-   flex-flow: nowrap row;
-   justify-content: flex-end;
-}
-
 .viewDate {
    width: unset;
    display: flex;
    flex: 1;
+   padding-left: 0;
 }
 
 .choose {
