--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,6 +3,7 @@
    padding: 5px;
    border-radius: 50px;
    font-size: 20px;
+   text-indent: 10px;
    color: #2A1F60;
    outline: none;
    padding-right: 20px;
