--- a/src/components/AddStudentPopup.js/StudentPopUp.css
+++ b/src/components/AddStudentPopup.js/StudentPopUp.css
@@ -10,6 +10,8 @@
   width: 900px;
   z-index: 10;
   transition: .3s;
+  height: 700px;
+  overflow-y: auto;
 }
 .layer {
   position: fixed;
@@ -20,10 +22,33 @@
   background-color: var(--mainGray);
   opacity: 0.4;
 }
+.image-holder {
+  width: 150px;
+  height: 150px;
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 40px;
+  overflow: hidden;
+}
+.image-holder img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: none;
+}
+input[type="file"] {
+  display: none;
+}
+label {
+  
+}
 .phone {
   width: 300px !important;
 }
-
 .pop-up button {
   box-shadow: rgb(128, 128, 128) 1px 1px 5px;
   transition: .3s;
