--- a/src/components/ContextMenu/ContextMenu.module.css
+++ b/src/components/ContextMenu/ContextMenu.module.css
@@ -5,4 +5,15 @@
    border-radius: 20px;
    padding: 15px 0px;
    z-index: 10000000;
+   /*animation: contextAnim 0.5s;*/
 }
+/*
+@keyframes contextAnim {
+   from {
+      transform: scale(0, 0);
+   }
+
+   to {
+      transform: scale(1, 1);
+   }
+}*/
